tests/snapshots/mcp_stdio_test__fetch_success_response.snap
---
source: tests/mcp_stdio_test.rs
assertion_line: 227
expression: normalized
---
{
  "id": "<dynamic>",
  "jsonrpc": "2.0",
  "result": {
    "content": [
      {
        "text": "Content downloaded successfully to: .tempwebfetch/<hash>.html",
        "type": "text"
      }
    ],
    "isError": false
  }
}
